# FNELEM-GPU

./: .gitignore  CMakeLists.txt  FNELEM-GPU.sln  FNELEM-GPU.vcxproj  LICENSE  README.md  kernel.cu  main.cu  test-matrix-cpu-inversion.txt  test-matrix-cpu.txt
fnelem/analysis/: matrix_inversion.cu  matrix_utils.cpp  static_analysis.cpp  static_analysis.h
fnelem/math/: FEMatrix.h  fematrix.cpp  fematrix.h  fematrix_utils.cpp  fematrix_utils.h  matrix_inversion.cu  matrix_inversion_cpu.cpp  matrix_inversion_cpu.h  matrix_inversion_cuda.cu  matrix_inversion_cuda.h
fnelem/model/base/: ModelComponent.h  constants.h  model.cpp  model.h  model_component.cpp  model_component.h  sole.cpp  sole.cxx  sole.fwd.hpp  sole.hpp
fnelem/model/elements/: element.cpp  element.h  membrane.cpp  membrane.h
fnelem/model/load/: load.cpp  load.h
fnelem/model/loads/: load.cpp  load.h  load_membrane_distributed.cpp  load_membrane_distributed.h  load_node.cpp  load_node.h  load_pattern.cpp  load_pattern.h  load_pattern_constant.cpp  load_pattern_constant.h
fnelem/model/node/: Node.h  node.cpp  node.h
fnelem/model/nodes/: node.cpp  node.h
fnelem/model/restraints/: node_restraint.cpp  node_restraint.h  restraint.cpp  restraint.h  restraint_node.cpp  restraint_node.h
test/: test_FEMatrix.cpp  test_ModelComponent.cpp  test_Node.cpp  test_cuda.cpp  test_suite.cpp  test_suite.h  test_utils.h
test/analysis/: __analysis__.cpp  test_static_analysis.h
test/math/: __math__.cpp  force_cuda_cpu.cpp  test_fematrix.cpp  test_fematrix.h  test_fematrix_utils.cpp  test_fematrix_utils.h
test/model/base/: __base__.cpp  test_model.h  test_model_component.cpp  test_model_component.h
test/model/elements/: __elements__.cpp  test_elements.cpp  test_elements.h  test_membrane.h
test/model/load/: __load__.cpp  test_load.h
test/model/loads/: __loads__.cpp  test_load.h  test_load_membrane_distributed.h  test_load_node.h  test_load_pattern.h  test_load_pattern_constant.h
test/model/node/: test_node.cpp  test_node.h
test/model/nodes/: __nodes__.cpp  test_node.h
test/model/restraints/: __restraints__.cpp  test_node_restraint.h  test_restraint_node.h
